Wed Oct  8 04:29:21 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add Vector.basis.
	  Based on patch by gogo tanaka [#10072]

Tue Oct  7 23:40:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (rb_f_kill): get rid of deadlock as unhandled and
	  discarded signals do not make interrupt_cond signaled.
	  based on the patch by Kazuki Tsujimoto at [ruby-dev:48606].
	  [Bug #9820]

Tue Oct  7 22:43:44 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_method.c: use typed data.

Tue Oct  7 21:47:05 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_param.c: refactoring.

Tue Oct  7 21:40:17 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_method.c: refactoring. add
	  olemethod_data_get_struct to wrap Data_Get_Struct.
	* ext/win32ole/win32ole_method.h: ditto.
	
	* ext/win32ole/win32ole_param.c (oleparam_ole_param):
	  call olemethod_data_get_struct instead of Data_Get_Struct.

Tue Oct  7 11:17:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_systmpdir): try user temporary directory by
	  confstr() on Mac OS X.
	  c.f. http://www.opensource.apple.com/source/ruby/ruby-104/patches/ext_etc_etc.c.diff

Tue Oct  7 10:48:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (struct stat.st_size): prefer off_t over int, long,
	  and so on.  inspired by
	  http://www.opensource.apple.com/source/ruby/ruby-104/patches/config.h.ed

Tue Oct  7 10:37:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_UNIVERSAL_ARCH): fix missing quoting
	  brackets.  incorporated from
	  http://www.opensource.apple.com/source/ruby/ruby-104/patches/configure.diff

Mon Oct  6 23:34:42 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_param.c: use typed data.

Mon Oct  6 22:37:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.h (struct RSymbol): move from internal.h.
