@@ -84,6 +84,8 @@ with all sufficient information, see the ChangeLog file.
       which is obtained by multiplying the first minor by (-1)**(row + column).
     * hstack and vstack are new instance and class methods to stack matrices
       horizontally and vertically.
+    * Matrix#laplace_expansion(row_or_column: num) returns the laplace_expansion
+      along the +num+ -th row or column.
     * Vector.basis(size:, index:) returns the specified basis vector
 
 * Method
